# trace-cli

./: .gitignore  COPILOT.md  DEV_SUBMISSION.md  LICENSE  README.md  RELEASING.md  devto.md  fix_data.py  inject_mock_data.py  main.py  package.json  pyproject.toml  requirements.txt  tracecli-0.1.2.tgz
demos/: RECORDING_GUIDE.md  config.yml
src/: __init__.py  __main__.py  ai.py  autostart.py  browser.py  categorizer.py  cli.py  config.py  database.py  focus.py  system.py  tracker.py
tests/: test_browser.py  test_categorizer.py  test_custom_rules.py  test_database.py  test_focus.py  test_heatmap.py  test_monitor.py  test_stress.py
tracecli-0.1.2/src/: monitor.py
