[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracecli"
version = "2.0.0"
description = "The terminal's black box for your digital life. A privacy-first activity monitor."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Haseeb Arshad", email = "haseebarshad@users.noreply.github.com"}]
keywords = ["productivity", "tracker", "cli", "windows", "privacy", "copilot"]

[project.urls]
Homepage = "https://github.com/Haseeb-Arshad/trace-cli"
Repository = "https://github.com/Haseeb-Arshad/trace-cli"
Issues = "https://github.com/Haseeb-Arshad/trace-cli/issues"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "pywin32>=306",
    "rich>=13.0",
    "click>=8.1",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
tracecli = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
